test/analyzer/input_programs/valid_programs/program05.tea
a := true

if a:
  out("a is true")
end
