test/analyzer/input_programs/invalid_programs/program08.tea
b := 'a'

# invalid since the condition must be boolean
while a := b:
  out(a)
end